--- a/Style/style.css
+++ b/Style/style.css
@@ -142,7 +142,7 @@ header{
 .main-sec{
 
 	height: 450px;
-	background: url("../images/Comverse_hp_A08.jpg") no-repeat;
+	background: url("../assets/Comverse_hp_A08.jpg") no-repeat;
 	background-size: 107% 100%;
 	background-position: 2px 0px;
 }
@@ -280,7 +280,7 @@ header{
 .solutions{
 
 	height: 400px;
-	background: url("../images/Comverse_hp_A08-2.jpg") no-repeat;
+	background: url("../assets/Comverse_hp_A08-2.jpg") no-repeat;
 }
 
 
@@ -325,7 +325,7 @@ header{
 .events{
 
 	height: 410px;
-	background: url("../images/BG14.png") no-repeat center;
+	background: url("../assets/BG14.png") no-repeat center;
 	background-size: 100% 104%;
 }
 
