--- a/Style/styleguide.css
+++ b/Style/styleguide.css
@@ -127,6 +127,7 @@ header .header-container{
 	margin: 5px;
     text-align: center;
 	color: #fff;
+    line-height: 2.5;
 }
 
 .colors-container .color1{
@@ -171,29 +172,30 @@ header .header-container{
 
 .button{
 
-  	width: 150px;
-	height: 34px;
-  	display: block;
-	border-radius: 6px;
-	background-color: #2793c9;
-	color: #fff;
-	text-align: left;
-	padding-left: 15px;
-	box-shadow: 0px 1px 2px 0px rgba(62, 157, 194, 0.75);
-  	line-height: 2.2;
+  	width: 125px;
+  height: 29px;
+  display: block;
+  border-radius: 6px;
+  background-color: #2793c9;
+  color: #fff;
+  text-align: left;
+  padding-left: 15px;
+  box-shadow: 0px 1px 2px 0px rgba(62, 157, 194, 0.75);
+  line-height: 1.9;
+  margin: 15px 0;
 }
 
 
 .arrow{
 
-	width:0;
-	border-left: 12px solid #fff;
-	border-top: 8px solid transparent;
-	border-bottom: 8px solid transparent;
-	border-radius: 2px;
-	float: right;
-	margin-top: 9px;
-	margin-right: 8px;
+	width: 0;
+  border-left: 10px solid #fff;
+  border-top: 6px solid transparent;
+  border-bottom: 6px solid transparent;
+  border-radius: 2px;
+  float: right;
+  margin-top: 9px;
+  margin-right: 12px;
 }
 
 .colored-rec{
@@ -201,14 +203,24 @@ header .header-container{
 	height: 250px;
 }
 
+.articles{
+    margin-top: 50px;
+}
+
 .rectangle{
 
-  	width: 290px;
-	height: 174px;
+    width: 280px;
+    height: 164px;
 	background-color: rgba(255, 51, 153, 0.9);
 	box-shadow: 0px 1px 4px 0px #a2a2a2;
 	border-radius: 6px;
   	padding: 5px;
+    display: inline-block;
+}
+
+.articles li:nth-child(2),
+.articles li:nth-child(3){
+    margin-left: 13px;
 }
 
 .rec-sent{
@@ -228,12 +240,30 @@ header .header-container{
   	margin-left: 15px;
 }
 
+.details:before{
+    
+    content: url("../assets/icons/Link2.png");
+    display: inline-block;
+    vertical-align: sub;
+    margin-right: 5px;
+    transform: scale(.8);
+    
+}
+
+/*----------------------------------blured rec section------------------------------------*/
+
 .blured-recs{
 
 	height: 200px;
 }
 
-.b-rec{
+.blured-title{
+  font-size: 32px;
+  padding-bottom: 10px;
+  color: #fff;
+}
+
+.blured-rec{
   	border-radius: 2px;
 	background-color:  rgba(255, 255, 255, 0.4);
 	box-shadow: 0px 1px 4px 0px #a2a2a2;
@@ -242,7 +272,7 @@ header .header-container{
   	padding: 0 10px;
 }
 
-.b-rec p {
+.blured-rec p {
   	width: 188px;
 	float: right;
  	margin-top: 10px;
@@ -276,6 +306,23 @@ header .header-container{
 	margin-top: 5px;
   	display: block;
 }
+
+.blured-container a{
+  color: #fff;
+  text-decoration: none;
+  display: inline-block;
+  padding-top: 10px;
+}
+
+.blured-container a .icons:nth-of-type(1){
+  background: url("../assets/icons/calendar-icon.png") no-repeat;
+    display: inline-block;
+    width: 15px;
+    height: 22px;
+    margin-right: 7px;
+}
+
+/*---------------------------------------stories section-----------------------------------*/
 
 .stories-box{
 
@@ -380,8 +427,10 @@ header .header-container{
   color: #000;
 }
 
+/*-----------------------------blog section--------------------------------*/
+
 .blog-posts{
-  width: 240px;
+  width: 244px;
   height: 280px;
   background-color: rgba(225, 225, 225, 0.28);
   padding: 15px;
@@ -499,4 +548,14 @@ ul.social-networks li:nth-child(2){
 ul.social-networks li:nth-child(3){
 
 	background: url("../assets/icons/LinkedIn.png") no-repeat;
+}
+
+/*---------------------------solutions section-------------------------------*/
+
+ul li:nth-child(1) div{
+    background: url("../assets/icons/Robot.png") no-repeat;
+    width: 100px;
+    height: 80px;    
+    background-size: 94px 77px;
+    background-position: 7px 0px;
 }
